#1312: Added GlAccountType object and queries